# ml-proj

./: .gitignore  experiments.ipynb  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebooks/: DNN.ipynb  boosting.ipynb  draw.ipynb  linearAlgoritms.ipynb  trees.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: config.py  draw.ipynb  feature.py  linearAlgoritms.ipynb  main.py  model.py  preprocessing.py  validation.py
