[project]
name = "ml-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "omegaconf>=2.3.1",
    "pandas>=3.0.4",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "xgboost>=3.3.0",
]

[dependency-groups]
dev = ["pytest>=9.1.1", "ruff>=0.15.20"]

[tool.ruff]
line-length = 256
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
